# jokkerin-ventti

./: .gitattributes  .gitignore  LICENSE.md  README.md  _config.yml  eslint.config.js  index.html  package-lock.json  package.json  serve.sh  style.css  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
benchmarks/: index.html  main.ts
editor/: index.html
fbx/: ab_crunch.fbx  back_extension.fbx  feet_forward_jump.fbx  hand_leg_touch_jump.fbx  jumping_jacks.fbx  lunges.fbx  placeholder.fbx  push_ups.fbx  side_muscle.fbx
schemas/: animation.v2.schema.json
src/: animations.test.ts  animations.ts  audio-manager.ts  camera.ts  engine.ts  main.ts  types.ts  ui-controller.ts  vite-env.d.ts  webgpu.ts  workout-app.ts  workout-state.test.ts  workout-state.ts
src/assets/Workouts/: jokkeri_ventti.json
src/assets/animations/: ab_crunch.anim  ab_crunch.json  acdc_scissor_jump.json  back_extension.anim  back_extension.json  backwards_lunge.json  burpees.json  crossed_arms_situp.json  easier_leg_lean.json  feet_forward_jump.anim  feet_forward_jump.json  hand_leg_touch_jump.anim  hand_leg_touch_jump.json  jumping_jacks.anim  jumping_jacks.json  leg_lift_running.json  lunges.anim  lunges.json  one_leg_jump.json  one_leg_squats.json  parachute_jump.json  placeholder.anim  placeholder.json  planking.json  push_ups.anim  push_ups.json  side_muscle.anim  side_muscle.json  squat_jumps.json  straight_leg_lean.json
src/editor/: history.test.ts  history.ts  main.ts  overlay.ts
tools/: extract_hierarchy.py  extract_rest_pose.py  fbx_to_smpl.py  fbx_tools.py  sync_smpl.sh
wasm/: Cargo.toml  build.rs
wasm/.cargo/: config.toml
wasm/src/: animation.rs  bench.rs  bone_hierarchy.rs  camera.rs  editor.rs  gpu.rs  ik.rs  lib.rs  math.rs  skeleton.rs  skeleton_constants.rs  state.rs
wasm/src/bone/: anim_ids.rs  cache.rs  clip.rs  id.rs  mod.rs  pose.rs
wasm/src/shaders/: grid.wgsl  shadow.wgsl  skeleton.wgsl
