[package]
name = "jokkerin-ventti-wasm"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
serde-wasm-bindgen = "0.6.5"
cfg-if = "1.0"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
glam = { version = "0.30.9", features = ["serde", "bytemuck"] }
bytemuck = { version = "1.21", features = ["derive"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.9.2"
wasm-bindgen-test = "0.3.56"

[dependencies.wgpu]
version = "28.0"

[features]
portable_simd = []

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Document", "HtmlCanvasElement", "Performance"]

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.30.9", features = ["serde"] }
