[package]
name = "jokkerin-ventti-wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
cfg-if = "1.0"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1.7"
glam = { version = "0.31.0", features = ["serde", "bytemuck"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
static_assertions = "1.1.0"
half = { version = "2.7.1", features = ["num-traits"] }

[dev-dependencies]
rand = "0.9.0"
wasm-bindgen-test = "0.3.58"

[dependencies.wgpu]
version = "28.0"
features = ["webgl"]

[features]
portable_simd = []

[dependencies.web-sys]
version = "0.3.85"
features = ["console", "Window", "Document", "HtmlCanvasElement", "Performance"]

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.31.0", features = ["serde"] }
heck = "0.5.0"
